# rust_projects

./: .gitignore  Cargo.toml  countsort  main  main.rs  notes.md  worldloop
countsort/: Cargo.toml  README.md  plot_stats.ipynb  plot_stats_faster.ipynb  results.npy  results_2.npy  stats.ods
countsort/.ipynb_checkpoints/: plot_stats-checkpoint.ipynb  plot_stats_faster-checkpoint.ipynb
countsort/src/: countsort.rs  lib.rs  main.rs
countsort/tests/: test.rs
src/: 01_worldloop.rs  02_countsort.rs
