[package]
name = "countsort"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
rand = "0.8.5"

[lib]
name = "countsort"
path = "src/lib.rs"
# crate-type = ["cdylib"]
# Uncomment this when compiling for Python.
# https://github.com/rust-lang/cargo/issues/7885


[[bin]]
name = "countsort"
path = "src/main.rs"

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]
